@@ -16,6 +16,13 @@ Changes in backwards compatibility policy
   (Nikola Tanković, Uwe Schindler, Chris Male, Mike McCandless,
   Robert Muir)
 
+Optimizations
+
+* LUCENE-4462: DocumentsWriter now flushes deletes, segment infos and builds
+  CFS files if necessary during segment flush and not during publishing. The latter
+  was a single threaded process while now all IO and CPU heavy computation is done
+  concurrently in DocumentsWriterPerThread. (Simon Willnauer)
+
 ======================= Lucene 4.1.0 =======================
 
 New Features
